# polyminis-game-server

./: .gitignore  README.md
src/: CMakeLists.txt  Main.cpp  Main.h
src/Core/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  JsonHelpers.cpp  JsonHelpers.h  OS.cpp  OS.h  Server.cpp  Server.h  Tools.h  Types.h
src/Game/: CMakeLists.txt  GameRules.cpp  GameRules.h  GameUtils.cpp  GameUtils.h
src/Game/Admin/: AdminService.cpp  AdminService.h
src/Game/CreatureObservation/: CreatureObservationService.cpp  CreatureObservationService.h
src/Game/Inventory/: InventoryService.cpp  InventoryService.h
src/Game/SpaceExploration/: CMakeLists.txt  OrbitalInteractionsService.cpp  OrbitalInteractionsService.h  Planet.cpp  Planet.h  PlanetManager.cpp  PlanetManager.h  SpaceExplorationService.cpp  SpaceExplorationService.h  SpaceMap.cpp  SpaceMap.h
src/Game/SpeciesCatalogue/: SpeciesCatalogue.cpp  SpeciesCatalogue.h  SpeciesCatalogueService.cpp  SpeciesCatalogueService.h
src/Game/SpeciesDesigner/: SpeciesDesignerService.cpp  SpeciesDesignerService.h
src/Game/User/: UserService.cpp  UserService.h
